--- a/vhdl_optimized/constrains_ac97_virtex5.ucf
+++ b/vhdl_optimized/constrains_ac97_virtex5.ucf
@@ -1,4 +1,4 @@
-NET "clk" 			LOC="AH15" 	| IOSTANDARD=LVCMOS33;	# 100MHz clock
+NET "clk" 			LOC="AH17" 	| IOSTANDARD=LVCMOS33;	# 33MHz clock
 NET "rstn" 			LOC="AC24" 	| IOSTANDARD=LVCMOS18;	# SW8
 
 NET "i_sdata_in" 	LOC="AE18" 	| IOSTANDARD=LVCMOS33;
@@ -13,6 +13,7 @@ NET "i_volume[2]"	LOC="AF25" 	| IOSTANDARD=LVCMOS18; 	# SW3
 NET "i_volume[3]"	LOC="AG27" 	| IOSTANDARD=LVCMOS18; 	# SW2
 NET "i_volume[4]"	LOC="U25" 	| IOSTANDARD=LVCMOS18; 	# SW1
 
+NET "i_agc_enable" LOC="AC25" | IOSTANDARD=LVCMOS18; 	# SW7;
 
 #NET "o_L_AGC[7]"	LOC="AF23" 	| IOSTANDARD=LVCMOS33; 	# led_w
 #NET "o_L_AGC[8]"	LOC="E8" 	| IOSTANDARD=LVCMOS33; 	# led_c
